--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Noto+Serif+TC|Raleway');
+      @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Noto+Serif+TC|Raleway');
     </style>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Dana Oira - Data Visualization UI Engineer - San Francisco</title>
+    <title>Dana Oira Shi - Data Visualization UI Engineer - San Francisco</title>
   </head>
   <body>
     <noscript>
