--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Noto+Serif+TC|Raleway');
+      @import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Baskerville|Noto+Serif+TC|Raleway');
     </style>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
